[package]
name = "ipwned-localdb"
version = "0.9.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["default-tls", "gzip", "http2", "macos-system-configuration"] }
bytes = "1.6.0"
tokio = { version = "1.38.0", features = ["sync", "rt", "macros", "signal", "time"] }
futures = "0.3.30"
tokio-rusqlite = "0.5.1"
rusqlite = "0.31.0"
nom = "7.1.3"
faster-hex = "0.9.0"
#qfilter = { path = "./qfilter", features = ["serde"] }
qfilter = { version = "0.1.6", features = ["serde"] }
serde = "1.0.203"
ciborium = "0.2.2"
parse_duration = "2.1.1"
pretty-duration = "0.1.1"
chrono = "0.4.38"
argh = "0.1.12"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.2"
log = "0.4.21"
simplelog = { version = "0.12.2", features = ["termcolor"] }
rocket = "0.5.1"
